src/objects/RT1__MeetingMemberActivity__c.object
<CustomObject>
    <fields>
        <fullName>RT1__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>RT1__Information__c</fullName>
        <label>Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RT1__MeetingDateTime__c</fullName>
        <formula>RT1__MeetingMember__r.RT1__MeetingDateTime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meeting Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RT1__MeetingMember__c</fullName>
        <label>ReadyTalk Meeting Member</label>
        <referenceTo>RT1__ReadyTalkMeetingMember__c</referenceTo>
        <relationshipLabel>Meeting Member Activities</relationshipLabel>
        <relationshipName>MeetingMemberActivities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RT1__Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>RT1__ReadyTalkMeeting__c</fullName>
        <formula>RT1__MeetingMember__r.RT1__MeetingName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ReadyTalk Meeting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__ReadytalkAttendanceId__c</fullName>
        <externalId>true</externalId>
        <label>Readytalk Attendance Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RT1__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Meeting Attendance</fullName>
                </value>
                <value>
                    <fullName>Meeting Registration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ReadyTalk Meeting Member Activity</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ReadyTalk Meeting Member Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>